# nexum

./: README.md  pyproject.toml
examples/: clustering_with_perceptron.ipynb
lab1/: main.py
lab1/test/: test_simple_split_line_visualization.py  test_split_line_visualization_with_image.py
neural_network/core/: activation_functions.py  initialization_functions.py  layers.py  neural_network.py
neural_network/services/: enums.py  utils.py
nexum/core/: activation_functions.py  activations.py  initializations.py  layers.py  losses.py  models.py  trainer.py
nexum/services/: iteration_logger.py  utils.py
services/: layer.py  neural_network.py
tests/core/: test_layers.py  test_load.py  test_save.py
tests/services/: test_iteration_logger.py
tests/visual/: test_backprop.py  test_simple_split_line_visualization.py  test_softmax.py  test_split_line_visualization_with_image.py
