[tool.poetry]
name = "neural-networks"
version = "0.1.0"
description = ""
authors = ["Blackgolyb <andrejomelnickij@gmail.com>"]
readme = "README.md"
packages = [
    { include = "services" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
matplotlib = "^3.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
