[tool.poetry]
name = "nexum"
version = "0.2.0"
description = ""
authors = ["Blackgolyb <andrejomelnickij@gmail.com>"]
readme = "README.md"
packages = [
    { include = "nexum" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ruff = "^0.0.292"
isort = "^5.12.0"


[tool.poetry.group.examples.dependencies]
scikit-learn = "^1.3.1"
plotly = "^5.17.0"
ipywidgets = "^8.1.1"
ipykernel = "^6.25.2"
nbformat = "^5.9.2"


[tool.poetry.group.tests.dependencies]
plotly = "^5.17.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
